care/force-app/main/default/objects/Appealcallout__mdt/Appealcallout__mdt.object-meta.xml
<CustomObject>
    <label>Appealcallout</label>
    <pluralLabel>Appealcallout</pluralLabel>
</CustomObject>