care/force-app/main/default/objects/Appealcallout__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>https://www.dev.carezen.net/api/appeal/salesforce-callback</description>
    <label>Endpoint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>