care/force-app/main/default/objects/Appealcallout__mdt/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <label>UserName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>